@@ -18,6 +18,15 @@ AC_ARG_WITH(linuxthreads,
 LINUXTHREADS="$withval"
 )
 
+PWCBSD="no"
+AC_ARG_WITH(pwcbsd,
+[  --with-pwcbsd           Use pwcbsd based webcams ( only BSD )
+]
+,
+PWCBSD="$withval"
+)
+
+
 AC_MSG_CHECKING(for Darwin)
 Darwin=`uname -a | grep "Darwin"`
 
@@ -39,10 +48,18 @@ if test "${Darwin}" = ""; then
 			THREAD_LIB_CHECK="/usr/local/lib/liblthread.so"
 		fi
 
-		TEMP_CFLAGS="${CFLAGS} -I/usr/local/include"
+		if test "${PWCBSD}" != "no"; then
+			VIDEO="video.o video2.o video_common.o"
+			TEMP_CFLAGS="${CFLAGS} -I/usr/local/include -DPWCBSD"
+		else 
+			VIDEO="video_freebsd.o"
+			TEMP_CFLAGS="${CFLAGS} -I/usr/local/include"	
+		fi
+
 		TEMP_LDFLAGS="${LDFLAGS} -L/usr/local/lib"
 		TEMP_LIBS="-L/usr/local/lib"
-		VIDEO="video_freebsd.o"
+		AC_MSG_RESULT(Build with PWCBSD support $PWCBSD)
+
 	fi
 else
 	TEMP_CFLAGS="${CFLAGS} -I/sw/include"
@@ -66,17 +83,16 @@ TEMP_CFLAGS="${TEMP_CFLAGS} ${CFLAGS}"
 TEMP_LDFLAGS="${TEMP_LDFLAGS} ${LDFLAGS}"
 
 
-if test "${FreeBSD}" != ""; then
+if test "${FreeBSD}" != "" && test "${PWCBSD}" = "no"; then
 
-AC_MSG_CHECKING(bktr headers in /usr/include/dev/bktr)
+	AC_MSG_CHECKING(bktr headers in /usr/include/dev/bktr)
 
-if test -f /usr/include/dev/bktr/ioctl_meteor.h && test -f /usr/include/dev/bktr/ioctl_bt848.h; then
-	AC_MSG_RESULT(yes)
-else
-	AC_MSG_RESULT(no)
-	TEMP_CFLAGS="${TEMP_CFLAGS} -DOLD_BKTR"
-fi
-
+	if test -f /usr/include/dev/bktr/ioctl_meteor.h && test -f /usr/include/dev/bktr/ioctl_bt848.h; then
+		AC_MSG_RESULT(yes)
+	else
+		AC_MSG_RESULT(no)
+		TEMP_CFLAGS="${TEMP_CFLAGS} -DOLD_BKTR"
+	fi
 #
 # Check to Exclude BKTR 
 #
@@ -1164,6 +1180,11 @@ if test "${FreeBSD}" != ""; then
         	echo "BKTR included:       No"
 	fi
 
+	if test "${PWCBSD}" = "yes"; then
+		echo "PWCBSD include:      Yes"
+	else
+		echo "PWCBSD include:      No"
+	fi
 
 else
 	if test "${V4L}" = "yes"; then
